--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
+    "@testing-library/react-hooks": "^5.0.3",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "enzyme": "^3.11.0",
@@ -71,6 +72,9 @@
         "statements": 80
       }
     },
-    "coverageReporters": ["text","html"]
+    "coverageReporters": [
+      "text",
+      "html"
+    ]
   }
 }
