--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     ],
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*stories.{js,jsx,ts,tsx}"
+      "!src/**/*stories.{js,jsx,ts,tsx}",
+      "!src/index.js"
     ],
     "coverageThreshold": {
       "global": {
